// brobot project's app build.gradle

plugins {
	id 'java'
	id 'io.freefair.lombok' version '8.6'
	id 'org.springframework.boot' version '3.2.4'
	id 'io.spring.dependency-management' version '1.1.4'
}

// module-specific configurations
group = 'io.github.jspinak.brobot'
version = '0.0.1-SNAPSHOT'

java {
	sourceCompatibility = '20'
}

configurations {
	compileOnly {
		extendsFrom annotationProcessor
	}
}

repositories {
	mavenCentral()
}

dependencies {
	implementation project(':library') // Dependency on the library module
	implementation project(':log') // Dependency on the log module
	compileOnly 'org.projectlombok:lombok'
	annotationProcessor 'org.projectlombok:lombok'

	// JUnit Jupiter for testing
	testImplementation 'org.junit.jupiter:junit-jupiter-api:5.10.2'
	testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.10.2'
	// Spring Boot Starter Test for Spring Boot testing support
	implementation 'org.springframework.boot:spring-boot-starter-test' //:3.2.2

	implementation 'org.springframework.boot:spring-boot-starter-web' //:3.2.2
	implementation 'com.fasterxml.jackson.core:jackson-databind'
	//implementation 'jakarta.persistence:jakarta.persistence-api:3.1.0'
	// database
	implementation 'org.springframework.boot:spring-boot-starter-data-jpa'
	implementation 'org.springframework.boot:spring-boot-starter-data-rest'
	implementation 'org.postgresql:postgresql:42.7.4'
	testImplementation group: 'com.h2database', name: 'h2', version: '2.2.224'
	implementation 'org.hibernate:hibernate-core:6.1.0.Final'

	implementation('com.sikulix:sikulixapi:2.0.5') {
		exclude group: 'org.slf4j', module: 'slf4j-nop'
		exclude group: 'org.slf4j', module: 'slf4j-api'
	}
	//implementation 'ch.qos.logback:logback-classic:1.4.12' //this is part of the Spring Boot starter
	//implementation ('org.slf4j:slf4j-api:1.7.36') //SpringBoot prefers logback

	implementation group: 'org.bytedeco', name: 'javacv-platform', version: '1.5.10'
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
	implementation 'com.github.kwhat:jnativehook:2.2.2'

	//testAnnotationProcessor 'org.projectlombok:lombok'
	implementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	//testImplementation 'org.projectlombok:lombok-mapstruct-binding:0.2.0'
	implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.14.0' // for mapstruct issue

	implementation 'org.springframework.boot:spring-boot-starter-data-elasticsearch'
	implementation 'org.springframework.boot:spring-boot-starter-websocket'
	implementation 'com.fasterxml.jackson.datatype:jackson-datatype-jsr310:2.15.2'
}

test {
	useJUnitPlatform()
}

// Configure MapStruct compiler arguments
tasks.withType(JavaCompile) {
	options.compilerArgs += [
			'-Amapstruct.defaultComponentModel=spring'
	]
}
